@@ -59,9 +59,15 @@
 #include <assert.h>
 #include <fcntl.h>
 #ifndef USE_MINI_EVENT
-#include <event.h>
+#  ifdef HAVE_EVENT_H
+#    include <event.h>
+#  else
+#    include <event2/event.h>
+#    include "event2/event_struct.h"
+#    include "event2/event_compat.h"
+#  endif
 #else
-#include "mini_event.h"
+#  include "mini_event.h"
 #endif
 #include "remote.h"
 #include "util.h"
