@@ -1,6 +1,8 @@
 3 February 2014: Wouter
 	- Disabled recvmmsg and sendmmsg usage by default because kernel
 	  versions have implementation issues: ipv6 ignored, security issues.
+	- Detect libevent2 install automatically by configure, and use
+	  event2 header files if necessary.
 
 30 January 2014: Wouter
 	- Fix expired zones to give SERVFAIL, also when parent zone loaded.
